--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,12 +1,13 @@
 .NavBar {
   box-sizing: border-box;
   margin: 0;
-  background: lightgray;
+  box-shadow: 0px 1px 30px -5px rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5%;
 }
 
 #avatar {
@@ -16,4 +17,19 @@
 .menu-btn::before {
   content: '\2630';
   height: 100%;
+}
+
+.nav-btn{
+  background: green;
+  height: 100%;
+}
+
+.NavBar .active {
+  color: #ff2e63;
+}
+
+.NavBar > a {
+  text-decoration: none;
+  color: gray;
+  user-select: none;
 }
