--- a/src/Account/Account.css
+++ b/src/Account/Account.css
@@ -1,11 +1,11 @@
-.hero{
+.Account__hero{
   box-sizing: border-box;
   position: relative;
   width: 100%;
   height: 30vh;
 }
 
-.name {
+.Account__name {
   position: absolute;
   z-index: 3;
   bottom: 3%;
