--- a/src/Notifications/Notifications.css
+++ b/src/Notifications/Notifications.css
@@ -1,7 +1,32 @@
-.Notifications__list {
-  list-style: none;
+.Notifications {
+  box-sizing: border-box;
+  padding: 0 5% 2%;
 }
 
-.Notifications__list > li::after {
-  
+.Notifications ul {
+  list-style: none;
+  padding: 0;
+}
+
+.__icon {
+  content: url('../assets/_ionicons_svg_md-notifications-outline.svg');
+  width: 2rem;
+  margin-right: 1rem;
+}
+
+.Notifications__list li div {
+  display: flex;
+  width: 100%;
+  height: 3rem;
+  align-items: center
+}
+
+.Notifications__list li>span{
+  padding-left: 3rem;
+  font-size: 0.8rem;
+  color: gray;
+}
+
+.Notifications__list li {
+  margin-bottom: 1rem;
 }
