--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -17,6 +17,7 @@
   margin: 2rem 0 0;
   font-size: 0.8rem;
   border: 1px solid rgba(169,169,169,0.3);
+  border-radius: 10px;
   height: 2rem;
   box-sizing: border-box;
 }
@@ -43,6 +44,8 @@
   padding: 0;
   border-collapse: collapse;
   border: 1px solid rgba(169,169,169,0.3);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .Search input[type="submit"] {
@@ -53,6 +56,8 @@
   font-size: 0.7rem;
   border: 1px solid rgba(169,169,169,0.3);
   border-left: none;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .Search .Project {
