--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -38,10 +38,10 @@
 
 .Search input[type="text"] {
   box-sizing: border-box;
-  height: 3vh;
+  height: 4vh;
   width: 100%;
   font-size: 1rem;
-  padding: 0;
+  padding: 0 5px;
   border-collapse: collapse;
   border: 1px solid rgba(169,169,169,0.3);
   border-top-left-radius: 10px;
@@ -51,7 +51,7 @@
 .Search input[type="submit"] {
   padding: 0;
   box-sizing: border-box;
-  height: 3vh;
+  height: 4vh;
   width: 20%;
   font-size: 0.7rem;
   border: 1px solid rgba(169,169,169,0.3);
