--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -3,20 +3,11 @@
   margin: 0;
   box-shadow: 0px 1px 30px -5px rgba(0, 0, 0, 0.3);
   width: 100%;
-  height: 60px;
+  height: 3.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5%;
-}
-
-#avatar {
-  height: 50px;
-}
-
-.menu-btn::before {
-  content: '\2630';
-  height: 100%;
 }
 
 .nav-btn{
@@ -25,11 +16,15 @@
 }
 
 .NavBar .active {
-  color: #ff2e63;
+  color: var(--main-color);
 }
 
 .NavBar > a {
   text-decoration: none;
   color: gray;
   user-select: none;
+}
+
+h2 {
+  margin-top: 0;
 }
