--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -1,8 +1,3 @@
-.Search {
-  padding: 0 5% 2%;
-  box-sizing: border-box;
-}
-
 .Search form {
   width: 100%;
   box-sizing: border-box;
@@ -30,6 +25,7 @@
 }
 
 .Search .bar {
+  margin-top: 1.5rem;
   display: flex;
   align-items: center;
   box-sizing: border-box;
@@ -38,7 +34,7 @@
 
 .Search input[type="text"] {
   box-sizing: border-box;
-  height: 4vh;
+  height: 2.4rem;
   width: 100%;
   font-size: 1rem;
   padding: 0 5px;
@@ -46,12 +42,14 @@
   border: 1px solid rgba(169,169,169,0.3);
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .Search input[type="submit"] {
   padding: 0;
   box-sizing: border-box;
-  height: 4vh;
+  height: 2.4rem;
   width: 20%;
   font-size: 0.7rem;
   border: 1px solid rgba(169,169,169,0.3);
@@ -64,14 +62,14 @@
   margin: 0 0 2rem;
 }
 
-#scrolableInSearch {
+#scrollableInSearch {
   margin-top: 2rem;
-  height: 73vh;
+  height: 77vh;
   overflow: scroll;
   position: relative;
 }
 
-#scrolableInSearch::-webkit-scrollbar{
+#scrollableInSearch::-webkit-scrollbar{
   width: 0px;
 }
 
