--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ code {
     monospace;
 }
 
+a {
+  text-decoration: none;
+}
+
 :root{
   --main-color: #ff2e63;
 }
@@ -24,8 +28,12 @@ section {
 }
 
 section h1 {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: 0;
   padding: 0;
+}
+
+.NotFound {
+  text-align: center;
 }
 
