--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,17 +1,18 @@
-.ProjectDetails__hero {
+.hero {
   box-sizing: border-box;
   position: relative;
   width: 100%;
   height: 30vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: var(--padding-side)
 }
 
-.ProjectDetails__name {
-  padding: 0 5% 3%;
+.hero .h1 {
   position: absolute;
   z-index: 3;
   bottom: 3%;
   color: white;
-  font-size: 2rem;
-  margin: 0;
   font-size: 1.5rem;
 }
