--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,8 +1,8 @@
-.ProjectCard {
+.projectCard {
   height: 200px;
   width: 100%;
   border-radius: 10px;
-  box-shadow: 0px 5px 20px -3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 5px 20px -3px var(--black-30);
   overflow: hidden;
   position: relative;
   margin-bottom: 5%;
@@ -11,9 +11,9 @@
   background-size: cover;
 }
 
-.ProjectCard > h2 {
+.projectCard > h2 {
   padding: 0.7rem;
-  color: white;
+  color: var(--subText-color);
   margin: 0;
   font-size: 1.2rem;
 } 
