--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,10 @@ section {
   padding: 0 5% 2%;
   box-sizing: border-box;
 }
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
