--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -5,8 +5,7 @@
   box-shadow: 0px 5px 20px -3px var(--black-30);
   overflow: hidden;
   position: relative;
-  margin-bottom: 5%;
-  margin-top: 5%;
+  margin-bottom: 7%;
   background-position: center;
   background-size: cover;
 }
@@ -17,3 +16,12 @@
   margin: 0;
   font-size: 1.2rem;
 } 
+
+.loader {
+  position: absolute;
+  left: 50%;
+  margin-left: -15px;
+  top: 50%;
+  margin-top: -35px;
+  z-index: -1;
+}
