--- a/src/components/Basic/Basic.module.css
+++ b/src/components/Basic/Basic.module.css
@@ -15,8 +15,14 @@
 
 .headerBtn {
   font-size: 1.8rem;
-  padding-top: 3px;
   color: var(--main-color);
+  transition: ease-in-out 0.15s;
+  cursor: pointer;
+}
+
+.headerBtn:hover {
+  transform: scale(1.15,1.15);
+  transition: ease-in-out 0.15s;
 }
 
 .inputContainer {
@@ -70,7 +76,7 @@
 }
 
 .btn {
-  margin: 1rem 0 0;
+  box-shadow: 0px 3px 10px -1px var(--black-30);
   box-sizing: border-box;
   width: 100%;
   padding: 0;
@@ -81,10 +87,43 @@
   background: var(--main-color);
   color: var(--subText-color);
   border: 1px solid var(--gray-30);
+  cursor: pointer;
 }
 
 .btn:nth-child(even) {
   background: var(--subText-color);
   color: var(--main-color);
+}
 
+.msg {
+  text-align: center;
+  color: var(--gray-100);
+  user-select: none;
+}
+
+.checkBox {
+  position: relative;
+  height: 3rem;
+  width: 3rem;
+  background: red;
+}
+
+.checkIcon {
+  position: absolute;
+  appearance: none;
+  border-radius: 10px;
+  border: 1px solid var(--gray-30);
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.checkIcon:checked {
+  background: red;
+}
+
+.icon {
+  position: absolute;
 }
