--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -16,3 +16,16 @@
   color: white;
   font-size: 1.5rem;
 }
+
+.editBtn {
+  color: var(--gray-30);
+  position: absolute;
+  right: 0;
+  padding: var(--padding-side);
+  padding-top: 5%;
+}
+
+.editBtn:hover {
+  color: var(--main-color);
+}
+
