--- a/src/components/Basic/Basic.module.css
+++ b/src/components/Basic/Basic.module.css
@@ -11,18 +11,18 @@
   margin: 0;
   padding: 0;
   user-select: none;
+  color: var(--main-text-90)
 }
 
 .headerBtn {
   font-size: 1.8rem;
   color: var(--main-color);
-  transition: ease-in-out 0.15s;
+  transition: all ease .3s;
   cursor: pointer;
 }
 
 .headerBtn:hover {
   transform: scale(1.15,1.15);
-  transition: ease-in-out 0.15s;
 }
 
 .inputContainer {
@@ -40,8 +40,10 @@
   font-size: 1rem;
   padding: 0 5px;
   border-collapse: collapse;
-  border: 1px solid var(--gray-30);
+  border: 1px solid var(--border-color);
   border-radius: 10px;
+  background: rgba(255,255,255,.05);
+  color: var(--main-text)
 }
 
 .inputContainer .loader {
@@ -54,19 +56,21 @@
   font-size: 1.2rem;
   display: block;
   margin: 1rem 0;
+  color: var(--main-text-80)
 }
 
 .textArea {
   box-sizing: border-box;
   width: 100%;
   padding: 5px;
-  margin: 0.5rem 0;
   resize: vertical;
   min-height: 150px;
   font-size: 0.8rem;
-  border: 1px solid var(--gray-30);
+  border: 1px solid var(--border-color);
   border-radius: 10px;
   text-align: justify;
+  background: rgba(255,255,255,.05);
+  color: var(--main-text)
 }
 
 .form fieldset {
@@ -76,7 +80,7 @@
 }
 
 .btn {
-  box-shadow: 0px 3px 10px -1px var(--black-30);
+  box-shadow: 0px 3px 10px -1px var(--box-shadow);
   box-sizing: border-box;
   width: 100%;
   padding: 0;
@@ -84,46 +88,74 @@
   border-radius: 10px;
   font-size: 1rem;
   font-weight: bold;
-  background: var(--main-color);
-  color: var(--subText-color);
-  border: 1px solid var(--gray-30);
+  background: var(--btn-body-2);
+  color: var(--sub-text);
+  border: 1px solid var(--border-color);
   cursor: pointer;
 }
 
-.btn:nth-child(even) {
-  background: var(--subText-color);
+.btn:nth-of-type(2) {
+  background: var(--btn-body-1);
   color: var(--main-color);
 }
 
 .msg {
   text-align: center;
-  color: var(--gray-100);
+  color: var(--main-text-60);
   user-select: none;
-}
-
-.checkBox {
-  position: relative;
-  height: 3rem;
-  width: 3rem;
-  background: red;
-}
-
-.checkIcon {
-  position: absolute;
-  appearance: none;
-  border-radius: 10px;
-  border: 1px solid var(--gray-30);
-  height: 100%;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.checkIcon:checked {
-  background: red;
 }
 
 .icon {
   position: absolute;
+}
+
+.form .btn {
+  margin-top: 1rem;
+}
+
+.checkbox {
+  margin: var(--padding-side);
+  display: block;
+  width: 4rem;
+  height: 2rem;
+  position: relative;
+  border-radius: 10px;
+  border: 1px solid var(--border-color);
+  position: fixed;
+  bottom: 1rem;
+  right: 0;
+}
+
+.checkbox > input {
+  appearance: none;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  outline: none;
+  position: absolute;
+}
+
+.checkbox > input:checked {
+  right: 0;
+}
+
+.icon {
+  color: rgba(169,169,169,0.2);
+  position: absolute;
+  font-size: 1.5rem;
+  margin: 0.25rem;
+}
+
+.icon:nth-child(2) {
+  transition: all 0.5s ease;
+  right: 0;
+}
+
+.icon.checked {
+  transition: all 0.5s ease;
+  color: var(--main-color);
+}
+
+html, p, h1, h2, h3 {
+  transition: all 0.5s ease;
 }
