--- a/src/components/Contributors/Contributors.module.css
+++ b/src/components/Contributors/Contributors.module.css
@@ -16,7 +16,7 @@
 }
 
 .image {
-  box-shadow: 0px 5px 10px -1px var(--black-30);
+  box-shadow: 0px 5px 10px -1px var(--box-shadow);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -31,11 +31,12 @@
   text-align: center;
   display: block;
   margin: 5px 0 3px;
+  color: var(--main-text-80)
 }
 
 .title {
   text-align: center;
   display: block;
   font-size: 0.7rem;
-  color: var(--gray-100)
+  color: var(--main-text-60)
 }
