--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -13,12 +13,12 @@
   position: absolute;
   z-index: 3;
   bottom: 3%;
-  color: white;
+  color: var(--sub-text);
   font-size: 1.5rem;
 }
 
 .editBtn {
-  color: var(--gray-30) !important;
+  color: var(--main-text-30)!important;
   position: absolute;
   right: 0;
   padding: var(--padding-side);
