--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,46 +1,37 @@
 .navBar {
   box-sizing: border-box;
   margin: 0;
-  box-shadow: 0px 1px 30px -5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 1px 30px -5px var(--box-shadow);
   width: 100%;
   height: 3.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5%;
-}
-
-.nav-btn{
-  background: green;
-  height: 100%;
-}
-
-.navBar .active {
-  color: var(--main-color);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .navBar > a {
+  color: var(--sub-text2);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
   position: relative;
-  text-decoration: none;
-  color: gray;
-  user-select: none;
 }
 
-h2 {
-  margin-top: 0;
-}
-
-.newReqs {
-  position: absolute;
-  z-index: -1;
+.navBar a:after {
+  content: '';
   display: block;
-  width: 20px;
-  height: 20px;
-  top: -10px;
-  right: -20px;
-  border-radius: 100%;
-  text-align: center;
-  background-color: var(--main-color);
-  color: white;
-  font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  height: 3px;
+  width: 0;
+  background: transparent;
+  transition: width .5s ease, background-color .5s ease, left .5s ease;
+}
+
+.navBar a:hover:after {
+  width: 100%;
+  left: 0;
+  background: var(--main-color);
 }
