--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -2,17 +2,15 @@
   height: 200px;
   width: 100%;
   border-radius: 10px;
-  box-shadow: 0px 5px 20px -3px var(--black-30);
+  box-shadow: 0px 5px 10px -3px var(--box-shadow);
   overflow: hidden;
   position: relative;
   margin-bottom: 7%;
-  background-position: center;
-  background-size: cover;
 }
 
 .projectCard > h2 {
   padding: 0.7rem;
-  color: var(--subText-color);
+  color: var(--sub-text);
   margin: 0;
   font-size: 1.2rem;
 } 
