--- a/src/routes/Account/Account.module.css
+++ b/src/routes/Account/Account.module.css
@@ -1,5 +1,5 @@
 .editBtn {
-  color: rgba(255,255,255,0.5);
+  color: var(--main-text-30);
   position: absolute;
   right: 0;
   padding: var(--padding-side);
