--- a/src/components/Basic/Basic.module.css
+++ b/src/components/Basic/Basic.module.css
@@ -159,3 +159,14 @@
 html, p, h1, h2, h3 {
   transition: all 0.5s ease;
 }
+
+.dot {
+  width: 0.7rem;
+  height: 0.7rem;
+  background: var(--main-color);
+  position: absolute;
+  top: 10px;
+  right: 0;
+  border-radius: 100%;
+  transition: all ease 1s;
+}
