--- a/src/components/Basic/Basic.module.css
+++ b/src/components/Basic/Basic.module.css
@@ -176,3 +176,30 @@ html, p, h1, h2, h3 {
   border-radius: 100%;
   transition: all ease 1s;
 }
+
+.error {
+  width: 100%;
+  height: 5rem;
+  background: rgba(255,0,0,.5);
+  position: absolute;
+  top: 3.5rem;
+  z-index: 9;
+  padding: var(--padding-side);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  transition: all .8s ease;
+}
+
+.error span {
+  color: var(--main-text);
+  margin-top: auto;
+  margin-bottom: auto;
+  display: block;
+  text-align: center;
+}
+
+.reqStatus {
+  text-align: center;
+  font-size: .8rem;
+}
