update propTypes, minor bugs fix

--- a/src/routes/Account/Account.module.css
+++ b/src/routes/Account/Account.module.css
@@ -1,5 +1,5 @@
 .editBtn {
-  color: var(--main-text-30);
+  color: var(--border-color);
   position: absolute;
   right: 0;
   padding: var(--padding-side);
