--- a/src/components/Basic/Basic.module.css
+++ b/src/components/Basic/Basic.module.css
@@ -14,14 +14,37 @@
   color: var(--main-text-90)
 }
 
-.headerBtn {
-  font-size: 1.8rem;
+.headerBtnWrapper {
+  position: absolute;
+  right: 0;
+  margin: var(--margin);
+  height: 2rem;
+  width: 2rem;
+  box-sizing: border-box;
+  background: none;
+  border: none;
+  padding: 0;
+  left: auto;
+  bottom: auto;
+  top: 1rem;
+}
+
+@media (min-width: 1100px) {
+  .headerBtnWrapper {
+    right: -15%;
+    bottom: 0;
+    top: auto;
+  }
+}
+
+.headerBtnIcon {
+  font-size: 2rem;
   color: var(--main-color);
   transition: all ease .3s;
   cursor: pointer;
 }
 
-.headerBtn:hover {
+.headerBtnIcon:hover {
   transform: scale(1.15,1.15);
 }
 
@@ -56,7 +79,7 @@
   font-size: 1.2rem;
   display: block;
   margin: 1rem 0;
-  color: var(--main-text-80)
+  color: var(--main-text-80);
 }
 
 .textArea {
@@ -70,7 +93,7 @@
   border-radius: 10px;
   text-align: justify;
   background: rgba(255,255,255,.05);
-  color: var(--main-text)
+  color: var(--main-text);
 }
 
 .form fieldset {
@@ -93,6 +116,14 @@
   border: 1px solid var(--border-color);
   cursor: pointer;
   transition: all .5s ease;
+}
+
+@media (min-width: 700px) {
+  .btn {
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 3rem;
+  }
 }
 
 .btn:nth-of-type(2) {
@@ -119,8 +150,8 @@
   margin-top: 1rem;
 }
 
-.checkbox {
-  margin: var(--padding-side);
+.themeSwitch {
+  margin: var(--padding-themeSwitch);
   display: block;
   width: 4rem;
   height: 2rem;
@@ -132,7 +163,21 @@
   right: 0;
 }
 
-.checkbox > input {
+@media (min-width: 1100px) {
+  .themeSwitch {
+    right: -5%;
+    bottom: -1%;
+  }
+}
+
+@media (min-width: 1500px) {
+  .themeSwitch {
+    right: -8%;
+    bottom: -6%;
+  }
+}
+
+.themeSwitch > input {
   appearance: none;
   width: 100%;
   height: 100%;
@@ -141,7 +186,7 @@
   position: absolute;
 }
 
-.checkbox > input:checked {
+.themeSwitch > input:checked {
   right: 0;
 }
 
@@ -172,9 +217,22 @@ html, p, h1, h2, h3 {
   background: var(--main-color);
   position: absolute;
   top: 10px;
-  right: 0;
+  right: 8%;
   border-radius: 100%;
   transition: all ease 1s;
+}
+
+@media (min-width: 650px) {
+  .dot {
+    right: 20%;
+  }
+}
+
+@media (min-width: 1100px) {
+  .dot {
+    right: auto;
+    left: 120px;
+  }
 }
 
 .error {
