--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,14 +1,13 @@
 .navBar {
-  box-sizing: border-box;
-  margin: 0;
-  box-shadow: 0px 1px 30px -5px var(--box-shadow);
-  width: 100%;
-  height: 3.5rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  height: auto;
+  grid-auto-rows: auto;
+  height: 3.5rem;
 }
 
 .navBar > a {
+  font-size: .9rem;
   color: var(--sub-text2);
   height: 100%;
   display: flex;
@@ -18,7 +17,7 @@
   position: relative;
 }
 
-.navBar a:after {
+.navBar > a:after {
   content: '';
   display: block;
   position: absolute;
@@ -30,8 +29,45 @@
   transition: width .5s ease, background-color .5s ease, left .5s ease;
 }
 
-.navBar a:hover:after {
+.navBar > a:hover:after {
   width: 100%;
   left: 0;
   background: var(--main-color);
+}
+
+@media (min-width: 500px) {
+  .navBar > a:nth-child(1) {
+    padding-left: 10%;
+  }
+  .navBar > a:nth-child(4) {
+    padding-right: 10%;
+  }
+}
+
+@media (min-width: 1100px) {
+  .navBar {
+    position: absolute;
+    height: 1e3px;
+    top: 3%;
+    width: 200px;
+    grid-template-rows: repeat(4, 7%);
+    grid-template-columns: 1fr;
+  }
+  .navBar > a:nth-child(1) {
+    padding-left: 20%;
+  }
+  .navBar > a {
+    font-size: 1.1rem;
+    grid-column-start: auto;
+    justify-content: flex-start;
+    padding: 20%;
+    transition: all .5s ease;
+  }
+  .navBar > a:hover:after {
+    width: 0;
+  }
+  .navBar > a:hover{
+    transform: translateX(10px);
+    transition: all .5s ease;
+  }
 }
