--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,8 @@ p {
 --color2: green;
 --color3: red;
 --padding-side: 0 5% 2%;
+--margin: 0 5%;
+--padding-themeSwitch: 0 5% 2% 0;
 }
 
 .Accepted {
@@ -65,9 +67,15 @@ p {
   color: var(--color1)
 }
 
+main {
+  background: var(--bg-color);
+  height: 100%;
+  transition: all .5s ease;
+}
+
 section {
   margin-top: 1.5rem;
-  padding: 0 5% 2%;
+  padding: var(--padding-side);
   box-sizing: border-box;
 }
 /* a:focus,
@@ -81,3 +89,33 @@ textarea:focus {
   box-shadow: 0 0 0 3px green;
 } */
 
+@media (min-width: 500px) {
+  :root{
+    margin-top: 1%;
+    --padding-side: 0 10% 5%;
+    --padding-themeSwitch: 0 10% 5% 0;
+  }
+}
+
+@media (min-width: 1100px) {
+  :root{
+    overflow: hidden;
+    --padding-side: 0 25% 5%;
+  }
+}
+
+@media (min-width: 1500px) {
+  :root {
+    --padding-side: 0 32% 5%;
+  }
+}
+
+@media (min-width: 800px) {
+  .infinite-scroll-component {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    grid-gap: 1rem;
+    overflow: inherit!important
+  }
+}
