--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -36,6 +36,10 @@
 }
 
 @media (min-width: 500px) {
+  .navBar {
+    margin-top: -1%;
+    margin-bottom: 1%;
+  }
   .navBar > a:nth-child(1) {
     padding-left: 10%;
   }
@@ -52,6 +56,7 @@
     width: 200px;
     grid-template-rows: repeat(4, 7%);
     grid-template-columns: 1fr;
+    z-index: 9;
   }
   .navBar > a:nth-child(1) {
     padding-left: 20%;
