--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,23 @@ html {
 }
 
 h3 {
-  color: var(--main-text-80)
+  color: var(--main-text-80);
 }
 
 p {
-  color: var(--main-text-90)
+  color: var(--main-text-90);
+  font-family: Roboto, sans-serif;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.devMsg {
+  color: var(--sub-text2);
+  font-size: .7rem;
+  text-align: center;
+  margin-top: 0;
 }
 
 :root{
@@ -99,7 +111,6 @@ textarea:focus {
 
 @media (min-width: 1100px) {
   :root{
-    overflow: hidden;
     --padding-side: 0 25% 5%;
   }
 }
@@ -110,7 +121,7 @@ textarea:focus {
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 700px) {
   .infinite-scroll-component {
     display: grid;
     grid-template-columns: 1fr 1fr;
