--- a/src/routes/LandingPage/LandingPage.module.css
+++ b/src/routes/LandingPage/LandingPage.module.css
@@ -1,14 +1,20 @@
 .version {
-  color: gray;
+  color: var(--color2);
   position: absolute;
   top: 4%;
   left: 5%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: .7rem;
+  font-size: .8rem;
 }
 
 .landingPage > header {
   position: relative;
+  box-shadow: 0px 5px 40px -2px var(--box-shadow);
+}
+
+.landingPage section {
+  font-size: 1.4rem;
+  line-height: 1.5
 }
 
 @media (min-width: 500px) {
@@ -89,14 +95,14 @@
 
 @media (min-width: 1100px) {
   .btnContainer {
-    right: 20%;
-    width: 20%;
+    right: 25%;
+    width: 25%;
   }
   .titleContainer {
-    left: 20%;
+    left: 25%;
   }
   .version {
-    left: 20%;
+    left: 25%;
   }
 }
 
@@ -121,8 +127,8 @@
 }
 
 .guestMsg {
-  color: var(--main-text);
-  font-size: .9rem;
+  color: var(--main-color);
+  font-size: 1rem;
   text-align: center;
 }
 
@@ -131,9 +137,8 @@
 }
 
 .landingPage ul, ol{
-  list-style: none;
-  padding-left: 10px;
-  color: var(--main-text)
+  padding-left: 20px;
+  color: var(--main-text);
 }
 
 .landingPage a {
@@ -152,3 +157,4 @@ footer {
   padding: 40px 0 0;
   font-size: .7rem
 }
+
