add error message rendering, minor css fixes

--- a/src/components/Scrollable/Scrollable.module.css
+++ b/src/components/Scrollable/Scrollable.module.css
@@ -3,6 +3,7 @@
   height: 68vh;
   position: relative;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .scrollable::-webkit-scrollbar{
