--- a/src/components/Basic/Basic.module.css
+++ b/src/components/Basic/Basic.module.css
@@ -66,13 +66,32 @@
   border: 1px solid var(--border-color);
   border-radius: 10px;
   background: rgba(255,255,255,.05);
-  color: var(--main-text)
+  color: var(--main-text);
+  -webkit-appearance: none;
 }
 
 .inputContainer .loader {
   padding-right: 10px;
   position: absolute;
   right: 0;
+}
+
+.loader {
+  display: flex;
+  justify-content: space-around;
+}
+
+.loading {
+  position: sticky;
+  top: 50%;
+  width: 100%;
+}
+
+.loadingWrapper {
+  z-index: 10;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
 .label {
@@ -94,6 +113,7 @@
   text-align: justify;
   background: rgba(255,255,255,.05);
   color: var(--main-text);
+  -webkit-appearance: none;
 }
 
 .form fieldset {
@@ -140,6 +160,8 @@
   text-align: center;
   color: var(--main-text-60);
   user-select: none;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .icon {
@@ -161,6 +183,18 @@
   position: fixed;
   bottom: 1rem;
   right: 0;
+}
+
+.themeSwitch input {
+  border: none
+}
+
+.themeSwitch input:checked {
+  background: none;
+}
+
+.themeSwitch input::selection {
+  background: none;
 }
 
 @media (min-width: 1100px) {
@@ -237,24 +271,17 @@ html, p, h1, h2, h3 {
 
 .error {
   width: 100%;
-  height: 5rem;
+  height: auto;
   background: rgba(255,0,0,.5);
-  position: absolute;
-  top: 3.5rem;
-  z-index: 9;
-  padding: var(--padding-side);
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
   transition: all .8s ease;
 }
 
 .error span {
-  color: var(--main-text);
-  margin-top: auto;
-  margin-bottom: auto;
+  color: white;
   display: block;
   text-align: center;
+  padding: 1rem;
 }
 
 .reqStatus {
