--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -32,14 +32,19 @@
   }
 }
 
+@media (min-width: 800px) {
+  .hero{
+    height: 400px
+  }
+}
+
 @media (min-width:1100px) {
   .hero {
     margin: var(--padding-side);
-    margin-top: -1%;
+    margin-top: 1%;
     width: 50%;
     height: 300px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px;
     margin-bottom: 3rem;
   }
   .h1 {
