--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -51,7 +51,8 @@
 @media (min-width: 1100px) {
   .navBar {
     position: absolute;
-    height: 1e3px;
+    height: 90%;
+    min-height: 800px;
     top: 3%;
     width: 200px;
     grid-template-rows: repeat(4, 7%);
