--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ p {
 
 .devMsg {
   color: var(--sub-text2);
-  font-size: .7rem;
+  font-size: .8rem;
   text-align: center;
   margin-top: 0;
 }
@@ -66,6 +66,7 @@ p {
 --padding-side: 0 5% 2%;
 --margin: 0 5%;
 --padding-themeSwitch: 0 5% 2% 0;
+--alt-color: #257aa6;
 }
 
 .Accepted {
@@ -84,6 +85,7 @@ main {
   background: var(--bg-color);
   height: 100%;
   transition: all .5s ease;
+  position: relative;
 }
 
 section {
@@ -91,16 +93,6 @@ section {
   padding: var(--padding-side);
   box-sizing: border-box;
 }
-/* a:focus,
-input:focus,
-button:focus,
-select:focus,
-textarea:focus {
-  outline-color: var(--main-color);
-  border-radius: 3px;
-  outline: 0;
-  box-shadow: 0 0 0 3px green;
-} */
 
 @media (min-width: 500px) {
   :root{
